--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -47,6 +47,7 @@ body {
 
 header {
   position: fixed;
+  z-index: 100;
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
